fixed card shadow
created a div with  absolute position on the top of the card that creates the shadow. when the card is hovered over that div has its hight changed to cover the whole card and is translated down 100px.

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -173,6 +173,15 @@ main {
     align-items: center;
     z-index: 1;
     transform: translateY(100px);
+
+    .cardshadow {
+      width: 300px;
+      height: 200px;
+      transition: 0.5s;
+      position: absolute;
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    }
+
     .content {
       display: flex;
       justify-content: center;
@@ -203,7 +212,6 @@ main {
     align-items: center;
     padding: 20px;
     box-sizing: border-box;
-    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
     transform: translateY(-100px);
     color: #000;
 
@@ -246,8 +254,14 @@ main {
       background: #46a6ff;
     }
 
+    .face.card-top .cardshadow {
+      height: 400px;
+      transform: translateY(100px);
+    }
+
     .face.card-descrip {
       transform: translateY(0px);
+      box-shadow: none;
     }
 
     .face.card-top .content {
